--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/icon.png" rel="icon">
+  <link href="assets/img/p-icon.png" rel="icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -49,8 +49,6 @@
         <ul>
           <li class="active"><a href="index.html">Inicio</a></li>
           <li><a href="#about">&iquest;Qui&eacute;nes somos?</a></li>
-          <li><a href="#services">Comit&eacute;s</a></li>
-          <li><a href="#team">Equipo</a></li>
           <li class="drop-down"><a href="">Proyectos</a>
             <ul>
               <li><a href="#portfolio">Todos</a></li>
@@ -64,11 +62,13 @@
               </li>
             </ul>
           </li>
+          <li><a href="#team">Equipo</a></li>
           <li><a href="#contact">Contacto</a></li>
-          <li><a href="#about" id="dona-menu">Dona</a></li>
+          <br>
+          <li><a href="#about" id="dona" class="dona-btn">Dona</a></li>
         </ul>
       </nav><!-- .nav-menu -->
-
+      
 
     </div>
   </header><!-- End Header -->
@@ -79,7 +79,7 @@
       <h1>Plan. Launch. Grow.</h1>
       <h2>J&oacute;venes mexicanos generando cambio</h2>
       <div class="d-flex">
-        <a href="#about" class="btn-get-started scrollto">Dona</a>
+        <a href="#about" class="btn-get-started scrollto">Con&oacute;cenos</a>
         <a href="https://www.youtube.com/watch?v=xZoYp-ATw-c" class="venobox btn-watch-video muted" data-vbtype="video" data-autoplay="true">Ver Video<i class="icofont-play-alt-2"></i></a>
       </div>
     </div>
