--- a/index.html
+++ b/index.html
@@ -167,12 +167,9 @@
       <div class="container" data-aos="fade-up">
 
         <div class="row">
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-4 col-md-4 offset-lg-2 d-flex align-items-center data-aos="fade-up" data-aos-delay="100">
             <div class="card">
-              <img src="assets/img/about-boxes-1.jpg" class="card-img-top" alt="...">
-              <div class="card-icon">
-                <i class="ri-brush-4-line"></i>
-              </div>
+              <img src="https://via.placeholder.com/500" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title"><a href="">Nuestra Misi&oacute;n</a></h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
@@ -191,14 +188,11 @@
               </div>
             </div>
           </div>-->
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
+          <div class="col-lg-4 col-md-4 d-flex align-items-center data-aos="fade-up" data-aos-delay="300">
             <div class="card">
-              <img src="assets/img/about-boxes-3.jpg" class="card-img-top" alt="...">
-              <div class="card-icon">
-                <i class="ri-movie-2-line"></i>
-              </div>
+              <img src="assets/img/vision-box.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title"><a href="">Nuestra Visi&oacute;n</a></h5>
+                <h5 class="card-title"><a href="">Visi&oacute;n</a></h5>
                 <p class="card-text">Nemo enim ipsam voluptatem quia voluptas sit aut odit aut fugit, sed quia magni dolores eos qui ratione voluptatem sequi nesciunt Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet. </p>
               </div>
             </div>
