So many changes LOL

--- a/index.html
+++ b/index.html
@@ -48,7 +48,14 @@
       <nav  class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="index.html">Inicio</a></li>
-          <li><a href="#about">&iquest;Qui&eacute;nes somos?</a></li>
+          <li class="drop-down"><a href="">Con&oacute;cenos</a>
+            <ul>
+                <li><a href="#"">&iquest;Qui&eacute;nes somos?</a></li>
+                <li><a href="#">Nuestra Misi&oacute;n</a></li>
+                <li><a href="#">Nuestra Visi&oacute;n</a></li>
+                <li><a href="#">Comit&eacute;s</a></li>
+            </ul>
+          </li>
           <li class="drop-down"><a href="">Proyectos</a>
             <ul>
               <li><a href="#portfolio">Todos</a></li>
@@ -62,7 +69,8 @@
               </li>
             </ul>
           </li>
-          <li><a href="#team">Equipo</a></li>
+          <li><a href="#team">Noticias</a></li>
+          <li><a href="#team">Impacto</a></li>
           <li><a href="#contact">Contacto</a></li>
           <br>
           <li><a href="#about" id="dona" class="dona-btn">Dona</a></li>
@@ -76,8 +84,8 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container" data-aos="fade-up" data-aos-delay="150">
-      <h1>Plan. Launch. Grow.</h1>
-      <h2>J&oacute;venes mexicanos generando cambio</h2>
+      <h1>S&Eacute; PARTE DEL CAMBIO.</h1>
+      <br>
       <div class="d-flex">
         <a href="#about" class="btn-get-started scrollto">Con&oacute;cenos</a>
         <a href="https://www.youtube.com/watch?v=xZoYp-ATw-c" class="venobox btn-watch-video muted" data-vbtype="video" data-autoplay="true">Ver Video<i class="icofont-play-alt-2"></i></a>
@@ -106,24 +114,24 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box">
                   <i class="icofont-document-folder"></i>
-                  <span data-toggle="counter-up">85</span>
-                  <p>Projects</p>
+                  <span data-toggle="counter-up">15</span>
+                  <p>Proyectos</p>
                 </div>
               </div>
 
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box">
                   <i class="icofont-clock-time"></i>
-                  <span data-toggle="counter-up">12</span>
-                  <p>Years of experience</p>
+                  <span data-toggle="counter-up">3</span>
+                  <p>A&nacute;os</p>
                 </div>
               </div>
 
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box">
                   <i class="icofont-award"></i>
-                  <span data-toggle="counter-up">15</span>
-                  <p>Awards</p>
+                  <span data-toggle="counter-up">8</span>
+                  <p>Premios</p>
                 </div>
               </div>
 
@@ -132,17 +140,15 @@
         </div>
 
         <div class="row">
-
-          <div class="col-lg-6 video-box align-self-baseline" data-aos="zoom-in" data-aos-delay="100">
-            <img src="assets/img/about.jpg" class="img-fluid" alt="">
-            <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
-          </div>
+            <div class="col-lg-6 pt-3 text-center">
+                <img src="assets/img/about.jpg" class="img-fluid" alt="">
+            </div>
+        
 
           <div class="col-lg-6 pt-3 pt-lg-0 content">
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+            <h3>&iquest;Qui&eacute;nes somos?</h3>
             <p class="font-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+                Pioneros del Cambio es una Asociación Civil que trata de concientizar acerca de problemáticas sociales, así como ayudar a solventarlas.
             </p>
             <ul>
               <li><i class="bx bx-check-double"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
@@ -150,11 +156,9 @@
               <li><i class="bx bx-check-double"></i> Voluptate repellendus pariatur reprehenderit corporis sint.</li>
               <li><i class="bx bx-check-double"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
             </ul>
-            <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
-            </p>
+            <br>
+            <br>
+            <br>
           </div>
 
         </div>
@@ -167,32 +171,20 @@
       <div class="container" data-aos="fade-up">
 
         <div class="row">
-          <div class="col-lg-4 col-md-4 offset-lg-2 d-flex align-items-center data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-4 col-md-4 offset-lg-2 d-flex align-items-center" data-aos="fade-up" data-aos-delay="100">
             <div class="card">
-              <img src="https://via.placeholder.com/500" class="card-img-top" alt="...">
+              <img src="assets/img/mision-box.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title"><a href="">Nuestra Misi&oacute;n</a></h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
               </div>
             </div>
           </div>
-         <!--< <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
-            <div class="card">
-              <img src="assets/img/about-boxes-2.jpg" class="card-img-top" alt="...">
-              <div class="card-icon">
-                <i class="ri-calendar-check-line"></i>
-              </div>
-              div class="card-body">
-                <h5 class="card-title"><a href="">Our Plan</a></h5>
-                <p class="card-text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. </p>
-              </div>
-            </div>
-          </div>-->
-          <div class="col-lg-4 col-md-4 d-flex align-items-center data-aos="fade-up" data-aos-delay="300">
+          <div class="col-lg-4 col-md-4 d-flex align-items-center" data-aos="fade-up" data-aos-delay="300">
             <div class="card">
               <img src="assets/img/vision-box.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title"><a href="">Visi&oacute;n</a></h5>
+                <h5 class="card-title"><a href="">Nuestra Visi&oacute;n</a></h5>
                 <p class="card-text">Nemo enim ipsam voluptatem quia voluptas sit aut odit aut fugit, sed quia magni dolores eos qui ratione voluptatem sequi nesciunt Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet. </p>
               </div>
             </div>
@@ -371,63 +363,6 @@
       </div>
     </section><!-- End Features Section -->
 
-    <!-- ======= Services Section ======= -->
-    <section id="services" class="services section-bg">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-          <h2>Services</h2>
-          <p>Check our Services</p>
-        </div>
-
-        <div class="row" data-aos="fade-up" data-aos-delay="200">
-          <div class="col-md-6">
-            <div class="icon-box">
-              <i class="icofont-computer"></i>
-              <h4><a href="#">Lorem Ipsum</a></h4>
-              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
-            </div>
-          </div>
-          <div class="col-md-6 mt-4 mt-md-0">
-            <div class="icon-box">
-              <i class="icofont-chart-bar-graph"></i>
-              <h4><a href="#">Dolor Sitema</a></h4>
-              <p>Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
-            </div>
-          </div>
-          <div class="col-md-6 mt-4 mt-md-0">
-            <div class="icon-box">
-              <i class="icofont-image"></i>
-              <h4><a href="#">Sed ut perspiciatis</a></h4>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
-            </div>
-          </div>
-          <div class="col-md-6 mt-4 mt-md-0">
-            <div class="icon-box">
-              <i class="icofont-settings"></i>
-              <h4><a href="#">Nemo Enim</a></h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-            </div>
-          </div>
-          <div class="col-md-6 mt-4 mt-md-0">
-            <div class="icon-box">
-              <i class="icofont-earth"></i>
-              <h4><a href="#">Magni Dolore</a></h4>
-              <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
-            </div>
-          </div>
-          <div class="col-md-6 mt-4 mt-md-0">
-            <div class="icon-box">
-              <i class="icofont-tasks-alt"></i>
-              <h4><a href="#">Eiusmod Tempor</a></h4>
-              <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </section><!-- End Services Section -->
-
     <!-- ======= Testimonials Section ======= -->
     <section id="testimonials" class="testimonials">
       <div class="container" data-aos="zoom-in">
@@ -435,8 +370,8 @@
         <div class="owl-carousel testimonials-carousel">
 
           <div class="testimonial-item">
-            <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-            <h3>Saul Goodman</h3>
+            <img src="https://via.placeholder.com/" class="testimonial-img" alt="">
+            <h3>Fernando Magno</h3>
             <h4>Ceo &amp; Founder</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -611,69 +546,6 @@
       </div>
     </section><!-- End Portfolio Section -->
 
-    <!-- ======= Team Section ======= -->
-    <section id="team" class="team section-bg">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-          <h2>Team</h2>
-          <p>Check our Team</p>
-        </div>
-
-        <div class="row">
-
-          <div class="col-lg-4 col-md-6">
-            <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/team/team-1.jpg" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>Walter White</h4>
-                <span>Chief Executive Officer</span>
-                <div class="social">
-                  <a href=""><i class="icofont-twitter"></i></a>
-                  <a href=""><i class="icofont-facebook"></i></a>
-                  <a href=""><i class="icofont-instagram"></i></a>
-                  <a href=""><i class="icofont-linkedin"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
-            <div class="member">
-              <div class="pic"><img src="assets/img/team/team-2.jpg" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>Sarah Jhonson</h4>
-                <span>Product Manager</span>
-                <div class="social">
-                  <a href=""><i class="icofont-twitter"></i></a>
-                  <a href=""><i class="icofont-facebook"></i></a>
-                  <a href=""><i class="icofont-instagram"></i></a>
-                  <a href=""><i class="icofont-linkedin"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
-            <div class="member">
-              <div class="pic"><img src="assets/img/team/team-3.jpg" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>William Anderson</h4>
-                <span>CTO</span>
-                <div class="social">
-                  <a href=""><i class="icofont-twitter"></i></a>
-                  <a href=""><i class="icofont-facebook"></i></a>
-                  <a href=""><i class="icofont-instagram"></i></a>
-                  <a href=""><i class="icofont-linkedin"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Team Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
@@ -758,36 +630,34 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
-              <h3>Dewi</h3>
+              <h3 id="pio-foot">Pioneros del Cambio </h3>
               <p>
                 A108 Adam Street <br>
                 NY 535022, USA<br><br>
-                <strong>Phone:</strong> +1 5589 55488 55<br>
-                <strong>Email:</strong> info@example.com<br>
+                <strong>Tel&eacute;fono:</strong> +52 722 102 6603<br>
+                <strong>Email:</strong> info@pionerosdelcambio.org<br>
               </p>
               <div class="social-links mt-3">
-                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                <a href="https://twitter.com/PionerosCambio" class="twitter"><i class="bx bxl-twitter"></i></a>
+                <a href="https://www.facebook.com/pionerosdelcambio" class="facebook"><i class="bx bxl-facebook"></i></a>
+                <a href="https://www.instagram.com/pioneros.delcambio/" class="instagram"><i class="bx bxl-instagram"></i></a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-2 col-md-6 footer-links">
-            <h4>Useful Links</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+            <h4>Links rápidos</h4>
+            <ul class="footer-list">
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Inicio</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Con&oacute;cenos</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Proyectos</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Noticias</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Impacto</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
+            <h4>Proyectos</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
@@ -797,13 +667,8 @@
             </ul>
           </div>
 
-          <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
-            <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
-            </form>
-
+          <div class="col-lg-4 col-md-6"> 
+              <img src="assets/img/icon.png" class="img-fluid"/>
           </div>
 
         </div>
@@ -812,14 +677,11 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Pioneros del cambio</span></strong>. All Rights Reserved </div>
+        &copy; Copyright <strong><span>Pioneros del Cambio AC</span></strong>. All Rights Reserved </div>
 
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/dewi-free-multi-purpose-html-template/ -->
-        Dise&ntilde;ado por <a href="https://bootstrapmade.com/">Jorge Flores</a>
+
+        Dise&ntilde;ado por <a href="https://www.facebook.com/jorge070901/" target="_blank">Jorge Flores</a>
       </div>
     </div>
   </footer><!-- End Footer -->
