About data fixed

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <div class="col-lg-11">
             <div class="row justify-content-end">
 
-              <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
+              <div class="col-5 col-lg-3 col-md-5  d-md-flex">
                 <div class="count-box">
                   <i class="icofont-simple-smile"></i>
                   <span data-toggle="counter-up">50</span>
@@ -111,7 +111,7 @@
                 </div>
               </div>
 
-              <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
+              <div class="col-6 col-lg-3 col-md-5  d-md-flex">
                 <div class="count-box">
                   <i class="icofont-document-folder"></i>
                   <span data-toggle="counter-up">15</span>
@@ -119,7 +119,7 @@
                 </div>
               </div>
 
-              <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
+              <div class="col-5 col-lg-3 col-md-5  d-md-flex">
                 <div class="count-box">
                   <i class="icofont-clock-time"></i>
                   <span data-toggle="counter-up">3</span>
@@ -127,7 +127,7 @@
                 </div>
               </div>
 
-              <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
+              <div class="col-6 col-lg-3 col-md-5  d-md-flex">
                 <div class="count-box">
                   <i class="icofont-award"></i>
                   <span data-toggle="counter-up">8</span>
