--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     </section>
 
     <!-- End About Boxes Section -->
-    <br><br><br>
+    <br><br><br> <!--
         <div id="comites" class="features container">
             <div class="row">
                 <ul class="nav nav-pills mb-3 justify-content-center" id="pills-tab" role="tablist">
@@ -308,6 +308,143 @@
                 </div>     
             </div>
         </div>
+    -->
+
+        <div id="comites" class="features container">
+            <div class="row" id="row-pills">
+               <ul class="nav nav-pills mb-3 nav-justified" id="pills-tab" role="tablist">
+                    <li class="col-sm-3 col-md-4 col-lg-3 nav-item" role="presentation">
+                        <a class="nav-link active" id="pills-cma-tab" data-bs-toggle="pill" data-bs-target="#pills-cma" type="button" role="tab" aria-controls="pills-cma" aria-selected="true">
+                            <i class="ri-seedling-line comite-icon"></i>
+                        </a>
+                    </li>
+                    <li class="col-sm-3 col-md-4 col-lg-3 nav-item" role="presentation">
+                        <a class="nav-link" id="pills-cv-tab" data-bs-toggle="pill" data-bs-target="#pills-cv" type="button" role="tab" aria-controls="pills-cv" aria-selected="false">
+                            <i class="ri-team-line comite-icon"></i>
+                        </a>
+                    </li>
+                    <li class="col-sm-3 col-md-4 col-lg-3 nav-item" role="presentation">
+                        <a class="nav-link" id="pills-ceg-tab" data-bs-toggle="pill" data-bs-target="#pills-ceg" type="button" role="tab" aria-controls="pills-ceg" aria-selected="false">
+                            <i class="ri-women-line comite-icon"></i>
+                        </a>
+                    </li>
+                    <li class="col-sm-3 col-md-4 col-lg-3 nav-item" role="presentation">
+                        <a class="nav-link" id="pills-pw-tab" data-bs-toggle="pill" data-bs-target="#pills-pw" type="button" role="tab" aria-controls="pills-pw" aria-selected="false">
+                            <i class="ri-terminal-fill comite-icon"></i>
+                        </a>
+                    </li>
+                </ul>
+
+                <div class="tab-content" id="pills-tabContent">
+                    <div class="tab-pane fade show active" id="pills-cma" role="tabpanel" aria-labelledby="pills-cma">
+                        <div class="row">
+                            <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0">
+                              <h3>Comit&eacute; de Medio Ambiente</h3>
+                              <h6>Representantes: Luisa Fernandez</h6>
+                              <br>
+                              <p class="font-italic">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                                magna aliqua.
+                              </p>
+                              <ul>
+                                <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+                                <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
+                                <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+                              </ul>
+                              <p>
+                                Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+                                velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                                culpa qui officia deserunt mollit anim id est laborum
+                              </p>
+                            </div>
+                            <div class="col-lg-6 order-1 order-lg-2 text-center">
+                              <video src="https://media0.giphy.com/media/ww1U4FeSjQy1PJjhoL/giphy.mp4?cid=ecf05e47jq2tnice5zvd3te0jg2axqye1hxjsi0k8tkxg8cx&rid=giphy.mp4" autoplay loop alt="" class="img-fluid">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab-pane fade" id="pills-ceg" role="tabpanel" aria-labelledby="pills-ceg">
+                        <div class="row">
+                            <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0">
+                              <h3>Comit&eacute; de Equidad de G&eacute;nero</h3>
+                              <h6>Representantes: Luisa Fernandez</h6>
+                              <br>
+                              <p class="font-italic">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                                magna aliqua.
+                              </p>
+                              <ul>
+                                <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+                                <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
+                                <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+                              </ul>
+                              <p>
+                                Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+                                velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                                culpa qui officia deserunt mollit anim id est laborum
+                              </p>
+                            </div>
+                            <div class="col-lg-6 order-1 order-lg-2 text-center">
+                              <video src="https://media0.giphy.com/media/3og0IQ29pE7zRwbh60/giphy.mp4?cid=ecf05e476dx9anojss40nym9hyf7i62zdnfpvdz9d61z4nz6&rid=giphy.mp4" autoplay loop alt="" class="img-fluid">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab-pane fade" id="pills-cv" role="tabpanel" aria-labelledby="pills-cv">
+                        <div class="row">
+                            <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0">
+                              <h3>Comit&eacute; de Voluntario</h3>
+                              <h6>Representantes: Luisa Fernandez</h6>
+                              <br>
+                              <p class="font-italic">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                                magna aliqua.
+                              </p>
+                              <ul>
+                                <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+                                <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
+                                <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+                              </ul>
+                              <p>
+                                Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+                                velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                                culpa qui officia deserunt mollit anim id est laborum
+                              </p>
+                            </div>
+                            <div class="col-lg-6 order-1 order-lg-2 text-center">
+                              <video src="https://media0.giphy.com/media/xT5LMUk6qCU7hbIf7y/giphy.mp4?cid=ecf05e47uwk54ahx6z1rq6ta0v7f8dhzzk53en792rb3yc9h&rid=giphy.mp4" autoplay loop alt="" class="img-fluid">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab-pane fade" id="pills-pw" role="tabpanel" aria-labelledby="pills-pw">
+                        <div class="row">
+                            <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0">
+                                <h3>Direcci&oacute;n de P&aacute;gina Web</h3>
+                                <h6>Representantes: Luisa Fernandez</h6>
+                                <br>
+                                <p class="font-italic">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                                magna aliqua.
+                              </p>
+                              <ul>
+                                <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+                                <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
+                                <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+                              </ul>
+                              <p>
+                                Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+                                velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                                culpa qui officia deserunt mollit anim id est laborum
+                              </p>
+                            </div>
+                            <div class="col-lg-6 order-1 order-lg-2 text-center">
+                              <video src="https://media4.giphy.com/media/UFGj6EYw5JhMQ/giphy.mp4?cid=ecf05e479ipsuxv1dhtmv9joz9vtzpjukmf6r1py0a2y1gri&rid=giphy.mp4" alt="" class="img-fluid" autoplay loop>
+                            </div>
+                        </div>
+                    </div>
+                  </div>
+            </div>
+        </div>
+
+
         <br><br><br>
 
 
