Added padding for small devices

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
         <div id="comites" class="features container">
             <div class="row" id="row-pills">
                <ul class="nav nav-pills mb-3 justify-content-center" id="pills-tab" role="tablist">
-                    <li class="col-sm-3 col-md-4 col-lg-3 nav-item" role="presentation">
+                    <li class="col-sm-3 pr-sm-3 col-md-4 col-lg-3 nav-item" role="presentation">
                         <a class="nav-link active" id="pills-cma-tab" data-bs-toggle="pill" data-bs-target="#pills-cma" type="button" role="tab" aria-controls="pills-cma" aria-selected="true">
                             <i class="ri-seedling-line comite-icon"></i>
                         </a>
