Changed image formats to .jpg

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         <div class="row">
           <div class="col-lg-4 col-md-4 offset-lg-2 d-flex align-items-center" data-aos="fade-up" data-aos-delay="100">
             <div class="card">
-              <img src="assets/img/mision-box.png" class="card-img-top" alt="...">
+              <img src="assets/img/mision-box.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                     <br>
                     <h3 class="card-title"><a href="">Nuestra Misi&oacute;n</a></h3>
@@ -191,7 +191,7 @@
           </div>
           <div class="col-lg-4 col-md-4 d-flex align-items-center" data-aos="fade-up" data-aos-delay="300">
             <div class="card">
-              <img src="assets/img/vision-box.png" class="card-img-top" alt="...">
+              <img src="assets/img/vision-box.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <br>
                 <h3 class="card-title"><a href="">Nuestra Visi&oacute;n</a></h3>
@@ -749,7 +749,7 @@
 
           <div class="col-sm-4 col-lg-3 col-md-6">
             <div class="footer-info text-center">
-                <img src="assets/img/icon.png" class="img-fluid align-middle" id="P-footer"/>
+                <img src="assets/img/icon.jpg" class="img-fluid align-middle" id="P-footer"/>
               <div class="social-links mt-3">
                 <a href="https://twitter.com/PionerosCambio" class="twitter"><i class="bx bxl-twitter"></i></a>
                 <a href="https://www.facebook.com/pionerosdelcambio" class="facebook"><i class="bx bxl-facebook"></i></a>
