--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon.jpg" rel="icon">
+  <link href="assets/img/apple-touch-icon.jpg" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -131,7 +131,7 @@
 
           <div class="col-sm-4 col-lg-3 col-md-6">
             <div class="footer-info text-center">
-                <img src="assets/img/icon.png" class="img-fluid align-middle" id="P-footer"/>
+                <img src="assets/img/icon.jpg" class="img-fluid align-middle" id="P-footer"/>
               <div class="social-links mt-3">
                 <a href="https://twitter.com/PionerosCambio" class="twitter"><i class="bx bxl-twitter"></i></a>
                 <a href="https://www.facebook.com/pionerosdelcambio" class="facebook"><i class="bx bxl-facebook"></i></a>
