Videos changed to .gif images

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                               </p>
                             </div>
                             <div class="col-lg-6 order-1 order-lg-2 text-center">
-                              <video src="https://media0.giphy.com/media/ww1U4FeSjQy1PJjhoL/giphy.mp4?cid=ecf05e47jq2tnice5zvd3te0jg2axqye1hxjsi0k8tkxg8cx&rid=giphy.mp4" autoplay loop alt="" class="img-fluid">
+                              <img src="assets/cma.gif" autoplay loop alt="" class="img-fluid">
                             </div>
                         </div>
                     </div>
@@ -384,8 +384,7 @@
                               </p>
                             </div>
                             <div class="col-lg-6 order-1 order-lg-2 text-center">
-                              <video src="https://media0.giphy.com/media/3og0IQ29pE7zRwbh60/giphy.mp4?cid=ecf05e476dx9anojss40nym9hyf7i62zdnfpvdz9d61z4nz6&rid=giphy.mp4" autoplay loop alt="" class="img-fluid">
-                            </div>
+                                <img src="assets/ceg.gif" autoplay loop alt="" class="img-fluid">                            </div>
                         </div>
                     </div>
                     <div class="tab-pane fade" id="pills-cv" role="tabpanel" aria-labelledby="pills-cv">
@@ -410,8 +409,7 @@
                               </p>
                             </div>
                             <div class="col-lg-6 order-1 order-lg-2 text-center">
-                              <video src="https://media0.giphy.com/media/xT5LMUk6qCU7hbIf7y/giphy.mp4?cid=ecf05e47uwk54ahx6z1rq6ta0v7f8dhzzk53en792rb3yc9h&rid=giphy.mp4" autoplay loop alt="" class="img-fluid">
-                            </div>
+                                <img src="assets/cv.gif" autoplay loop alt="" class="img-fluid" width="350">                            </div>
                         </div>
                     </div>
                     <div class="tab-pane fade" id="pills-pw" role="tabpanel" aria-labelledby="pills-pw">
@@ -436,8 +434,7 @@
                               </p>
                             </div>
                             <div class="col-lg-6 order-1 order-lg-2 text-center">
-                              <video src="https://media4.giphy.com/media/UFGj6EYw5JhMQ/giphy.mp4?cid=ecf05e479ipsuxv1dhtmv9joz9vtzpjukmf6r1py0a2y1gri&rid=giphy.mp4" alt="" class="img-fluid" autoplay loop>
-                            </div>
+                                <img src="assets/dpw.gif" autoplay loop alt="" class="img-fluid">                            </div>
                         </div>
                     </div>
                   </div>
