Added directors image & desc

--- a/index.html
+++ b/index.html
@@ -446,45 +446,32 @@
         <div class="owl-carousel testimonials-carousel">
 
           <div class="testimonial-item">
-            <img src="https://via.placeholder.com/50x50" class="testimonial-img" alt="">
-            <h3>Fernando Magno</h3>
-            <h4>Ceo &amp; Founder</h4>
+            <img src="assets/img/team/fer.jpg" class="testimonial-img" alt="">
+            <h3><a href='https://www.instagram.com/fermagno_/'>Fernando Magno</a></h3>
+            <h4>Director ejecutivo</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                Principal representante de la asociación en toda actividad que la involucre. Preside el consejo directivo local, así como sus reuniones. Organiza las votaciones relativas a las decisiones que se tomen en la asociación, y, a su vez, es el principal responsable y encargado de que se lleven a cabo las determinaciones tomadas por el consejo. Tiene el voto decisivo en votaciones en situación de empate.
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
           </div>
-
           <div class="testimonial-item">
-            <img src="https://via.placeholder.com/50x50" class="testimonial-img" alt="">
-            <h3>Arturo Diaz</h3>
-            <h4>Voluntario</h4>
+            <img src="assets/img/team/alex.jpg" class="testimonial-img" alt="">
+            <h3><a href='https://www.instagram.com/alexnoviaramos/'>Alex Novia</a></h3>
+            <h4>Director General</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                Encargado de la administración general de la asociación y todas sus sedes. Es el representante legal de la asociación en cualquiera de sus actividades y decisiones. Organiza y preside las reuniones de la asamblea general y está encargado del cumplimiento de todos los proyectos transversales.
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
           </div>
-
           <div class="testimonial-item">
-            <img src="https://via.placeholder.com/50x50" class="testimonial-img" alt="">
-            <h3>Lupita Ortiz</h3>
-            <h4>Beneficiario</h4>
+            <img src="assets/img/team/carlita.jpg" class="testimonial-img" alt="">
+            <h3><a href='https://www.instagram.com/maldonado_carlaa/'>Carla Maldonado</a></h3>
+            <h4>Sub-directora</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
-              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-            </p>
-          </div>
-
-          <div class="testimonial-item">
-            <img src="https://via.placeholder.com/50x50" class="testimonial-img" alt="">
-            <h3>Matt Bean</h3>
-            <h4>Donante</h4>
-            <p>
-              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
+                Se encarga del aseguramiento del cumplimiento de todas las actividades dentro de la asociación. A su vez, revisa y supervisa todos los trámites administrativos y decisiones dentro de la asociación. 
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
           </div>
